--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ langchain-text-splitters>=0.3.0
 faiss-cpu>=1.8.0
 openai>=1.13.3
 python-dotenv>=1.0.0
+reportlab>=4.0.0
+google-search-results>=2.4.2
